Removed Scroll Jumping Button on mobile devices, Fixed Image Gallery selected Image Loading Bug, Calender Added Margin-Bottom

--- a/assets/style/components/footer.scss
+++ b/assets/style/components/footer.scss
@@ -26,6 +26,7 @@
         position: absolute;
         box-shadow: 3px -3px 20px rgba(0, 0, 0, .16), -3px 3px 20px rgba(0, 0, 0, .16);
         transform: translateX(-25%) translateY(-140%);
+        cursor: pointer;
 
         @media screen and (min-width: $breakpoint-large) and (max-width: $breakpoint-large-max), handheld {
             width: 10vw;
