--- a/components/calender/calender.scss
+++ b/components/calender/calender.scss
@@ -75,8 +75,8 @@
         background-color: $bg-blue;
         border-radius: $border-radius;
         box-shadow: 10px 10px 15px rgba(0,0,0,0.2), -10px -10px 15px rgba(0,0,0,0.2);
-        margin: 2vh 0;
         width: $width;
+        margin: 2vh 0 10vh;
 
         .month {
             border-top-left-radius: $border-radius;
